procps-ng-NEXT
---------------
  * Rename pwait to pidwait
  * library: renamed to libproc-2 and reset to 0:0:0
  * library: add support for accessing smaps_rollup        issue #112, #201
  * pkill: Check for lt- variants of program name          issue #192
  * ps: Add OOM and OOMADJ fields                          issue #198
  * ps: Add IO Accounting fields                           issue #184
  * slabtop: Don't combine d and o options                 issue #160
  * top: exploit some library smaps_rollup provisions      issue #112

procps-ng-3.3.17
---------------
  * library: Incremented to 8:3:0
    (no removals or additions, internal changes only)
  * all: properly handle utf8 cmdline translations         issue #176
  * kill: Pass int to signalled process                    merge #32
  * pgrep: Pass int to signalled process                   merge #32
  * pgrep: Check sanity of SG_ARG_MAX                      issue #152
  * pgrep: Add older than selection                        merge #79
  * pidof: Quiet mode                                      merge #83
  * pidof: show worker threads                             Redhat #1803640
  * ps.1: Mention stime alias                              issue #164
  * ps: check also match on truncated 16 char comm names
  * pwait: New command waits for a process                 merge #97
  * sysctl: Match systemd directory order                  Debian #950788
  * sysctl: Document directory order                       Debian #951550
  * top: ensure config file backward compatibility         Debian #951335
  * top: add command line 'e' for symmetry with 'E'        issue #165
  * top: add '4' toggle for two abreast cpu display        issue #172
  * top: add '!' toggle for combining multiple cpus
  * top: fix potential SEGV involving -p switch            merge #114
  * vmstat: Wide mode gives wider proc columns             merge #48
  * watch: Add environment variable for interval           merge #62